--- a/app/src/main/res/layout/activity_piano.xml
+++ b/app/src/main/res/layout/activity_piano.xml
@@ -6,30 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".PianoActivity">
 
+    <EditText
+        android:id="@+id/input_text"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/add_button"
+        app:layout_constraintTop_toTopOf="@id/add_button"
+        app:layout_constraintBottom_toBottomOf="@id/add_button"/>
+
     <Button
         android:id="@+id/add_button"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ADD NEW FLOW"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="10dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/middle_guideline"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/add_button"
         app:layout_constraintBottom_toTopOf="@id/middle_guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/add_button">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/added_flow_view"
@@ -37,7 +47,7 @@
             android:layout_height="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/add_button"/>
+            app:layout_constraintTop_toBottomOf="@id/add_button" />
 
     </androidx.core.widget.NestedScrollView>
 
@@ -45,9 +55,9 @@
         android:id="@+id/bottom_text_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/middle_guideline"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/middle_guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
